--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
-    "dev:frontend": "vite --open",
+    "dev:frontend": "next dev",
     "dev:backend": "convex dev",
-    "build": "vite build",
-    "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
+    "build": "next build",
+    "start": "next start",
+    "lint": "tsc -p convex -noEmit --pretty false && next build"
   },
   "dependencies": {
-    "@convex-dev/auth": "^0.0.80",
+    "@workos-inc/authkit-nextjs": "^2.9.0",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
     "lucide-react": "^0.544.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.5.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0"
   },
